# netsim

./: .gitignore  AGENT.md  CLAUDE.md  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: bgp.rs  export.rs  mod.rs  ospf.rs  schemas.rs  simulation.rs  topology.rs  traffic.rs  websocket.rs
backend/src/engine/: bgp.rs  events.rs  mod.rs  models.rs  ospf.rs  policies.rs  simulation.rs  traffic.rs
backend/src/persistence/: store.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/layout/: AppShell.tsx  StatusBar.tsx  Toolbar.tsx
frontend/src/components/panels/: LinkPanel.tsx  RouterPanel.tsx
frontend/src/components/topology/: TopologyCanvas.tsx  cytoscapeConfig.ts
frontend/src/store/: selectionStore.ts  simulationStore.ts  topologyStore.ts
frontend/src/types/: models.ts
frontend/src/utils/: formatting.ts
